# SDD-Pro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  bootstrap.ps1  bootstrap.py  mkdocs.yml  requirements-docs.txt
.claude/: CLAUDE.md  INVARIANTS.yml  config.base.yml  loader.reverse.yml  loader.yml  settings.json
.claude/.metrics/: baseline-v4.0.0-pvlist.csv
.claude/agents/: adversarial-reviewer.md  arch-reviewer.md  arch.md  code-reviewer.md  constitutioner.md  dev-backend.md  dev-frontend.md  elicitor.md  po.md  qa.md  reverse-functional-extractor.md  reverse-inventory.md  reverse-ui-extractor.md  security-reviewer.md  spec-compliance-reviewer.md
.claude/commands/: arch-init.md  dev-backend.md  dev-frontend.md  dev-plan.md  dev-run.md  doc-refresh.md  feat-deepen.md  feat-generate.md  feat-validate.md  qa-generate.md  sdd-bootstrap.md  sdd-discover-stack.md  sdd-full.md  sdd-help.md  sdd-kill-server.md  sdd-poc.md  sdd-profile.md  sdd-reverse-init.md  sdd-reverse-inventory.md  sdd-reverse-ui.md  sdd-reverse.md  sdd-review.md  sdd-serve.md  sdd-status.md  us-generate.md
.claude/docs/: CHANGELOG-v6.md  CHANGELOG.md  COMPLIANCE.md  KNOWN-LIMITATIONS.md  MIGRATION.md  README.en.md  README.md  SLA.md  VERSIONING.md  WHY-SDD-PRO.md  WORKING-AGREEMENT.md  agents-reference.md  architecture.md  brainstorming-techniques.md  cache-strategy.md  commands-reference.md  config-precedence.md  configuration-reference.md  conventions.md  cookbook.md  getting-started.en.md  getting-started.md  glossary.md  hooks-and-protections.md  orphan-cleanup-policy.md  po-guide.md  poc-roi-methodology.md  prerequisites-matrix.md  quickstart.md  reverse-engineering-master-prompt.md  reverse-engineering-phase4-runtime.md  reverse-engineering-workflow.md  roadmap-v7-v8.md  runtime-pitfalls.md  troubleshooting.md  ux-designer-guide.md  validated-combos.md  workflow.md
.claude/python/: .coveragerc  README.md  _hook.py  code_review_patterns.yaml  pyproject.toml  security_patterns.yaml  sitecustomize.py
.claude/python/sdd_admin/: __init__.py  audit_orphans.py  cache_manifest.py  cleanup_orphans.py  framework_smoke.py  init_status_json.py  measure_batch.py  measure_cache_hit_rate.py  migrate_exit_codes.py  reduce_markdown.py  rotate_audit_logs.py  statusline.py  strip_bom.py  sync_stack_md.py  validate_libs_catalog.py  validate_libs_versions_in_md.py  validate_stack_md_headers.py  validate_templates.py  verify_telemetry_health.py
.claude/python/sdd_hooks/: __init__.py  audit_file_ownership.py  auto_invoke_complexity_router.py  block_env_bypass.py  enforce_tdd.py  enforce_two_stage_auditor.py  pre_write_lint.py  preflight_agent_budget.py  preflight_cost_cap.py  preflight_glob_scope.py  preflight_stack_combo.py  protect_framework.py  record_token_usage.py  resolve_po_hash_sentinel.py  session_start.py  validate_acceptance_gate.py  validate_augment_contract.py  validate_stack_consistency.py
.claude/python/sdd_lib/: __init__.py  adr_id.py  atomic_write.py  build_loop_trace.py  cache_control.py  checkpoint.py  ci.py  combos.py  console_db_schema.sql  exit_codes.py  file_locks.py  hook_input.py  layered_config.py  loader_yml.py  markdown_io.py  paths.py  pricing.py  project_config.py  run_id.py  schema_slice.py  stack_validator.py  stderr.py
.claude/python/sdd_lib/console_db/: __init__.py  core.py  qa.py  runs.py
.claude/python/sdd_lib/migrations/: 0002_add-qa-mutation-table.sql  0003_add-qa-e2e-table.sql  0004_add-auditor-runs-table.sql  0005_add-api-tests-status-column.sql  0006_add-build-loop-traces-table.sql  README.md
.claude/python/sdd_reverse/: __init__.py  css_palette_extractor.py  inventory_builder.py  language_signatures.yml  legacy_components_extractor.py  legacy_runner.py  playwright_capture.py  runner_signatures.yml  scan_legacy.py  ui_unit_detector.py
.claude/python/sdd_reverse_scripts/: __init__.py  legacy_runner.py  reverse_inventory.py
.claude/python/sdd_scripts/: __init__.py  _review_fetch.py  _review_report.py  acquire_libname_lock.py  bench_run.py  complexity_router.py  compute_plan_metadata.py  compute_us_complexity.py  context_budget.py  detect_arch_shortcircuit.py  detect_capabilities.py  dev_run_args.py  dispatch_fixes.py  elicitor_args.py  feat_to_pseudo_us.py  gate_decide.py  generate_schema_slice.py  index_adrs.py  ingest_agent_report.py  ingest_axe.py  ingest_feats_us.py  ingest_lighthouse.py  ingest_plans.py  init_console_db.py  manage_profile.py  mark_breaking_resolved.py  match_stack_catalog.py  migrate_us_v1_to_v2.py  parse_coverage.py  phase_planner.py  preflight.py  preflight_force_cumul.py  quality_scan.py  query_console_db.py  record_gate_decision.py  report_roi.py  report_token_usage.py  resolve_us_hash_sentinel.py  run_dev_phase.py  scan_repo.py  (+16 more)
.claude/python/tests/: __init__.py  conftest.py  test_acquire_libname_lock.py  test_acquire_libname_lock_unit.py  test_adr_id.py  test_agent_references_integrity.py  test_atomic_write.py  test_audit_cleanup_orphans.py  test_audit_file_ownership.py  test_block_env_bypass.py  test_block_env_bypass_heredoc.py  test_bootstrap.py  test_build_loop_trace.py  test_cache_control.py  test_checkpoint.py  test_cli_flags_declared.py  test_code_review_patterns.py  test_coerce_config_types.py  test_combos.py  test_combos_cross_check.py  test_compute_plan_metadata.py  test_compute_us_complexity.py  test_console_db.py  test_context_budget.py  test_critical_scripts_smoke.py  test_css_palette_extractor.py  test_detect_capabilities.py  test_dispatch_fixes_unit.py  test_encoding_safe_io.py  test_error_classification_count.py  test_exit_codes_unit.py  test_feat_to_pseudo_us.py  test_file_locks.py  test_gate_decide.py  test_gate_decide_unit.py  test_generate_schema_slice_cli.py  test_generated_project_gitignore_template.py  test_hook_input_unit.py  test_ingest_agent_report_unit.py  test_ingest_axe_unit.py  (+69 more)
.claude/python/tests/fixtures/e2e-combo-c1/: 1-Minimal.md  README.md
.claude/python/tests/integration/: test_minifeat_pipeline.py
.claude/rules/: auditor-orchestration.md  build-and-loop.md  dev-shared-preflight.md  (+7 more)
(+138 files in other folders)
